# CORI

./: .gitattributes  README.md  robot_status_publisher.py  setup_auto_publish.sh
archive/07_15_2025/cori_ws/log/: latest_build
archive/07_15_2025/cori_ws/src/cori_hardware/: package.xml
archive/07_15_2025/cori_ws/src/cori_hardware/arduino/cori_head_controller/launch/: cori_hardware.launch.py
archive/07_20_2025/cori_ws/: build.bash  find_arduino.py
archive/07_20_2025/cori_ws/src/cori_hardware/: setup.py
archive/07_26_2025/cori_ws/: setup_nginx.sh
archive/07_26_2025/cori_ws/src/cori_hardware/: README_WEB_API.md
cori_ws/: .gitignore  build.bash  nginx_cori.conf
cori_ws/install/cori_hardware/lib/cori_hardware/: realtime_web_control
cori_ws/log/: latest_build
cori_ws/src/cori_dsa/: roadmap.md
cori_ws/src/cori_hardware/: README.md  requirements.txt  setup.py
cori_ws/src/cori_hardware/cori_hardware/: README.md  index.html  realtime_web_control.py  web_api.py  web_api_simple.py  web_control_interface.html
cori_ws/src/cori_hardware/launch/: realtime_web_control.launch.py
cori_ws/src/cori_tools/config/: cori_ignition_database.json
docs/: Project_Breakdown.md
docs/progress_tracker/: github_analytics.sh
docs/progress_tracker/productivity_reports/: productivity_report_20250723_135044.txt  productivity_report_20250723_152951.txt
docs/project_updates/: v1.6_update.md  v1.7_update.md  v1.8_update.md
docs/work_in_progress/: CORI_Communication_Protocol.md
systemd/: cori-status-publisher.service
web/: robot-widget.html
(+19 files in other folders)
